# sinker

./: .env.sample  .env.test  .flake8  .gitignore  LICENSE-MIT  README.md  docker-compose.yml  http_ca.crt  pyproject.toml
.github/workflows/: test.yml
docker/: Dockerfile  cmd.sh
src/sinker/: __main__.py  bulk_action_generator.py  es.py  query_templates.py  runner.py  settings.py  sinker.py  utils.py
tests/: test_bulk_action_generator.py  test_e2e.py  test_generate_schema_tables.py  test_parse_schema_tables.py
tests/fixtures/: course_mv.sql  courses.json  people.json  person_mv.sql  schema.sql  views_to_indices.json
