[tool.poetry]
name = "sinker"
version = "0.1.4"
description = "Synchronize Postgres to Elasticsearch"
authors = ["Loren Siebert <loren@paradigm.xyz>"]
license = "MIT/Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
sinker = "sinker.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "^8.17.0"
environs = ">=9.5,<15.0"
psycopg = "^3.1.8"
pytest-mock = "^3.10.0"
sqlglot = "^26.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6,<8"
black = ">=23.1,<25.0"
mypy = "^1.0.0"
psycopg-binary = "^3.1.8"

[tool.poetry.group.test.dependencies]
pytest = ">=7.2.1,<9.0.0"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
